Added unit testing framework
- Added the unit testing framework to the solution
- Created a vector header file for the second part of the assignment
- Added a method to calculate the angles of a triangle only using the length of the sides

--- a/PolygonChekcer_UnitTesting/PolygonChekcer_UnitTesting.vcxproj.filters
+++ b/PolygonChekcer_UnitTesting/PolygonChekcer_UnitTesting.vcxproj.filters
@@ -15,24 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.c">
+    <ClCompile Include="PolygonChekcer_UnitTesting.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="triangleSolver.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="vector.c">
+    <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="triangleSolver.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="main.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="vector.h">
+    <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
